fieldx/tests/uncompilable/stable+sync,async-lock/serialize_off.stderr
error: feature 'serde' is required
 --> tests/uncompilable/serialize_off.rs
  |
  | #[fxstruct(sync, serde(serialize(off)))]
  |                  ^^^^^

warning: unused imports: `Deserialize` and `Serialize`
 --> tests/uncompilable/serialize_off.rs
  |
  | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
